--- a/relation/capitoli/capitolo-4.tex
+++ b/relation/capitoli/capitolo-4.tex
@@ -8,10 +8,10 @@
 \label{cap:considerations}
 %**************************************************************
 
-\intro{This chapter talk about final results and consideration about the project}\\
+\intro{This chapter is about the final results and considerations about the project}\\
 \section{Results}
-
-The result of mean and standard deviation of genome insertion length are:
+\normalsize
+The results of the mean and standard deviation of genome insertion length are:
 \begin{itemize}
 \item \begin{description}
 		\item[MEAN:] 2102
@@ -27,8 +27,12 @@ The result of mean and standard deviation of genome insertion length are:
 The obtained results are some structural variation found in the resequenced genome.
 These structural variation are:
 \begin{itemize}
+
 \item \begin{description}
-		\item[Long deletion] a long deletion is visible between 1.380k bases and 1.400k bases, this deletetation is confirmed by sequence coverage
+		\item[Insertion] a insertion is visible at 1.050k bases, this insertion is confirmed by the sequence coverage
+  \end{description}
+\item \begin{description}
+		\item[Long deletion] a long deletion is visible between 1.380k bases and 1.400k bases, this deletetation is confirmed by the sequence coverage
   \end{description}
 \end{itemize}
 \begin{itemize}
@@ -36,42 +40,49 @@ These structural variation are:
 		\item[Inversion] the inversion structural modification is visible between 1.745k bases and 1.770k bases
   \end{description}
 \end{itemize}
+\begin{itemize}
+\item \begin{description}
+		\item[Short deletion] a long deletion is visible at 2.448k bases, this deletetation is confirmed by the physical coverage
+  \end{description}
+\end{itemize}
 
-As I wrote in the section \ref{sec:cigar}, the cigar's trak allows ad helps to find these structural variations.\\\\
 
-About the kmers, the results are really varius and with larger \emph{k} size the number of kmer quantity decrease but the number of kmers become really huge.
-We can se that for the \emph{k = 4}, the most frquent kmers are: 
+
+As I wrote in the section \ref{sec:cigar}, the cigar's track allows and helps to find these structural variations.\\\\
+
+About the kmers, the results are really varius and with larger \emph{k} size the number of kmer quantity decreases but the number of kmers becomes really huge.
+We can see that for the \emph{k = 4}, the most frequent kmers are: 
 \begin{itemize}
 \item TTTT
 \item AAAC
 \item GTTT
 \end{itemize}
 
-For the the \emph{k = 7}, the most frquent kmers is: 
+For the \emph{k = 7}, the most frequent kmers is: 
 
 \begin{itemize}
 \item TTGAAAA
 \end{itemize}
 
-At last, for the the \emph{k = 9}, the most frquent kmers is:
+At last, for the  \emph{k = 9}, the most frequent kmers is:
 \begin{itemize}
 \item AAAACTTTT
 \end{itemize}
  
 \section{Considerations}
 
-Some difficults are rescounteredd about this project:
+Some difficulties can be encountered in this project:
 \begin{itemize}
 \item \begin{description}
-		\item[Information] the information retrivial is really diffucult, there availabble sources is often poor and always confused, the the same thing is really simple to find different definitions and different information. The most use blog and websites are \href{https://www.biostars.org/}{Biostars} and \href{http://seqanswers.com/forums/}{SEQ answer Forum}, but often the information are not right, also \href{https://it.wikipedia.org}{WeikiPedia} is used but often is not really clear about hese arguments.\\ I suoppose which these problems are caused by recently age of Bioinformatics.
+		\item[Information] the information retrieval is really difficult, the sources available  are often poor and always confused, for the same thing it's really easy to find different definitions and different information. The most used blog and websites are \href{https://www.biostars.org/}{Biostars} and \href{http://seqanswers.com/forums/}{SEQ answer Forum}, but often their information is not correct,  \href{https://it.wikipedia.org}{WeikiPedia} is used too, but often it's not clear about these topics.\\ I suppose these problems are caused by the young age of Bioinformatics.
   \end{description}
 \end{itemize}
 
 
 \begin{itemize}
 \item \begin{description}
-		\item[The approach] The approach to the project is not simple, there are many languages that could be used, but each one hide a problem.\\
-		Is necessary to evaluate each one of these programming languages by these:
+		\item[The approach] to approach the project is not simple, there are many languages that could be used, but each one hides a problem.\\
+		It's necessary to evaluate each one of these programming languages by these:
 		\begin{itemize}
 			\item semplicity
 			\item speed
@@ -85,11 +96,11 @@ Some difficults are rescounteredd about this project:
 
 \begin{itemize}
 \item \begin{description}
-		\item[Hardware] The hardware of the computer must be really strong, otherwise excute some point is not simple
+		\item[Hardware] The hardware of the computer must be really powerful, otherwise executing some tasks is not simple
   \end{description}
 \end{itemize}
 
 \section{Conclusions}
-The project has allows me to search and test this new field of computer science.
-The Bioinformatics will be the future of the computer science because is very sueful to find and identify some deseases, genomic variations, and this implicit explain how this helps us to prevent the healt problem for the humans as well animals and plants.\\\\
-The Bioinformatics could be helpfull in each area of the Biology.
+The project has allowed me to search and test this new field of computer science.
+The Bioinformatics will be the future of the computer science because it's very useful in finding and identifying some deseases, genomic variations, and this implicitly explains how it helps us prevent the health problem for humans as well as for animals and plants.\\\\
+The Bioinformatics could be helpful in each area of the Biology.
